--- a/Progressable2/Base.lproj/Main.storyboard
+++ b/Progressable2/Base.lproj/Main.storyboard
@@ -57,6 +57,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="projectTableView" destination="dL7-8W-hfW" id="Qth-9T-uqZ"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pkv-U7-GWl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -117,7 +120,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" id="twp-Jy-jCq">
-                                                    <rect key="frame" x="0.0" y="-3" width="320" height="162"/>
+                                                    <rect key="frame" x="0.0" y="-3" width="640" height="162"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                     <date key="date" timeIntervalSinceReferenceDate="444110169.30004698">
                                                         <!--2015-01-28 03:56:09 +0000-->
