--- a/Progressable2/Base.lproj/Main.storyboard
+++ b/Progressable2/Base.lproj/Main.storyboard
@@ -81,9 +81,9 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="F7K-LA-WPH" id="Dxj-oI-wIF">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" id="KS8-UC-VIb">
-                                                    <rect key="frame" x="99" y="8" width="123" height="29"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="top" segmentControlStyle="plain" id="KS8-UC-VIb">
+                                                    <rect key="frame" x="0.0" y="7" width="320" height="29"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                                     <segments>
                                                         <segment title="Project"/>
                                                         <segment title="Event"/>
@@ -114,16 +114,19 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Due" id="WvP-by-y98">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="155" id="Vyq-2E-HQV">
+                                    <tableViewCell contentMode="center" selectionStyle="none" indentationWidth="10" rowHeight="155" id="Vyq-2E-HQV">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Vyq-2E-HQV" id="5Cx-e7-pTD">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" id="twp-Jy-jCq">
-                                                    <rect key="frame" x="0.0" y="-3" width="640" height="162"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" id="twp-Jy-jCq">
+                                                    <rect key="frame" x="0.0" y="-3" width="320" height="162"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES"/>
                                                     <date key="date" timeIntervalSinceReferenceDate="444110169.30004698">
                                                         <!--2015-01-28 03:56:09 +0000-->
+                                                    </date>
+                                                    <date key="minimumDate" timeIntervalSinceReferenceDate="441802800">
+                                                        <!--2015-01-01 11:00:00 +0000-->
                                                     </date>
                                                 </datePicker>
                                             </subviews>
