Set default selection of type to "project"
Avoid user forgetting to choose a type

--- a/Progressable2/Base.lproj/Main.storyboard
+++ b/Progressable2/Base.lproj/Main.storyboard
@@ -81,7 +81,7 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="F7K-LA-WPH" id="Dxj-oI-wIF">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="top" segmentControlStyle="plain" id="KS8-UC-VIb">
+                                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="KS8-UC-VIb">
                                                     <rect key="frame" x="0.0" y="7" width="320" height="29"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                                     <segments>
